--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "antd": "^3.9.3",
     "autoprefixer": "7.1.6",
+    "axios": "^0.18.0",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -31,6 +32,7 @@
     "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "lodash": "^4.17.11",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -38,6 +40,7 @@
     "raf": "3.4.0",
     "react": "^16.5.2",
     "react-app-rewired": "^1.6.2",
+    "react-bootstrap": "^0.32.4",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
