--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "firebase": "^5.5.2",
+    "frappe-gantt-react": "0.0.8",
     "fs-extra": "3.0.1",
     "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "lodash": "^4.17.11",
+    "moment": "^2.22.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -43,9 +45,11 @@
     "react-bootstrap": "^0.32.4",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.2",
+    "react-gantt": "^2.1.7",
     "react-progressbar": "^15.4.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-trello": "^2.0.4",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "resolve": "1.6.0",
