--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "firebase": "^5.5.2",
+    "frappe-gantt": "^0.2.0",
     "frappe-gantt-react": "0.0.8",
     "fs-extra": "3.0.1",
+    "gantt-for-react": "^0.2.0",
     "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
